--- a/index.html
+++ b/index.html
@@ -294,50 +294,50 @@ I actively collaborate with international scholars on projects targeting top com
 
 
 
-  <!-- Publications -->
-  <section id="publications" class="py-20 bg-white">
-    <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-up">
-      <h2 class="text-4xl font-bold mb-8 text-center uppercase tracking-wide">📑 Selected Publications</h2>
-      <div class="flex justify-center gap-4 mb-6">
-        <button data-count="5" class="btn-count bg-blue-500 text-white px-4 py-2 rounded-full transition">Top 5</button>
-        <button data-count="10" class="btn-count px-4 py-2 rounded-full border border-blue-500 text-blue-500 hover:bg-blue-500 hover:text-white transition">Top 10</button>
-        <button data-count="all" class="btn-count px-4 py-2 rounded-full border border-blue-500 text-blue-500 hover:bg-blue-500 hover:text-white transition">All</button>
-        <input id="pub-search" type="search" placeholder="🔍 Search..." class="ml-6 border border-gray-300 rounded-full px-4 py-2 w-1/3 focus:outline-none focus:ring-2 focus:ring-blue-500" />
-      </div>
-      <div class="overflow-x-auto shadow-lg rounded-lg bg-white">
-        <table id="pub-table" class="min-w-full divide-y divide-gray-200">
-          <thead class="bg-gray-200">
-            <tr>
-              <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Year</th>
-              <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Title</th>
-              <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Venue / DOI</th>
-            </tr>
-          </thead>
-          <tbody class="divide-y divide-gray-100">
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2025</td><td class="px-6 py-4">Evaluating Force & Motion in Posterior Vitreous Detachment Maneuvers Using a Robotic Data Acquisition System in Cadaveric Human Eyes</td><td class="px-6 py-4 text-sm text-gray-600">SSRN 5209513</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2024</td><td class="px-6 py-4">Development and Integration of an Advanced GUI with Real-Time Data Logging for RCM-Based Robotic Surgery Devices</td><td class="px-6 py-4 text-sm text-gray-600">2024 12th RSI ICRoM, IEEE</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2024</td><td class="px-6 py-4">AI-Powered Framework for Cataract Surgery Video Optimization</td><td class="px-6 py-4 text-sm text-gray-600">2024 12th RSI ICRoM, IEEE</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2024</td><td class="px-6 py-4">AugmenTory: A Fast and Flexible Polygon Augmentation Library</td><td class="px-6 py-4 text-sm text-gray-600">arXiv:2405.04442</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2023</td><td class="px-6 py-4">Video-based Surgical Skill Assessment using Tree-based Gaussian Process Classifier</td><td class="px-6 py-4 text-sm text-gray-600">arXiv:2312.10208</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2023</td><td class="px-6 py-4">Advanced Deep Learning-Based Approach for Tooth Detection, and Dental Cavity and Restoration Segmentation in X-Ray Images</td><td class="px-6 py-4 text-sm text-gray-600">2023 11th RSI ICRoM</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2023</td><td class="px-6 py-4">AI-driven keratoconus detection: Integrating Medical Insights for Enhanced Diagnosis</td><td class="px-6 py-4 text-sm text-gray-600">2023 11th RSI ICRoM</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2023</td><td class="px-6 py-4">A Deep Dive Into Capsulorhexis Segmentation: From Dataset Creation to SAM Fine-tuning</td><td class="px-6 py-4 text-sm text-gray-600">2023 11th RSI ICRoM</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2023</td><td class="px-6 py-4">Toward Keratoconus Diagnosis: Dataset Creation and AI Network Examination</td><td class="px-6 py-4 text-sm text-gray-600">2023 11th RSI ICRoM</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2023</td><td class="px-6 py-4">Image Processing and Machine Vision in Surgery and Its Training</td><td class="px-6 py-4 text-sm text-gray-600">Journal of Control 17(2), 25-46</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2022</td><td class="px-6 py-4">Surgical instrument tracking for capsulorhexis eye surgery based on siamese networks</td><td class="px-6 py-4 text-sm text-gray-600">2022 10th RSI ICRoM</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2022</td><td class="px-6 py-4">An Observer-Based Responsive Variable Impedance Control for Dual-User Haptic Training System</td><td class="px-6 py-4 text-sm text-gray-600">2022 10th RSI ICRoM</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2021</td><td class="px-6 py-4">ARAS-Farabi Experimental Framework for Skill Assessment in Capsulorhexis Surgery</td><td class="px-6 py-4 text-sm text-gray-600">2021 9th RSI ICRoM</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2021</td><td class="px-6 py-4">Adaptive Robust Impedance Control of Haptic Systems for Skill Transfer</td><td class="px-6 py-4 text-sm text-gray-600">2021 9th RSI ICRoM</td></tr>
-            <tr><td class="px-6 py-4 text-sm text-gray-600">2019</td><td class="px-6 py-4">Resilient Consensus in Double-Integrator Systems with Switching Networks Facing Smart Attacks</td><td class="px-6 py-4 text-sm text-gray-600">2019 7th ICRoM</td></tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="mt-6 text-center">
-        <i class="fa-solid fa-graduation-cap text-2xl align-middle mr-2"></i>
-        <a href="https://scholar.google.com/citations?user=wTnN9IEAAAAJ&hl=en" class="text-blue-600 underline hover:text-blue-800">
-          More on Scholar</a>
-      </div>
+<!-- Publications -->
+<section id="publications" class="py-20 bg-white">
+  <div class="max-w-screen-lg mx-auto px-6" data-aos="fade-up">
+    <h2 class="text-4xl font-bold mb-8 text-center uppercase tracking-wide">📑 Selected Publications</h2>
+    <div class="flex justify-center gap-4 mb-6">
+      <button data-count="all" class="btn-count bg-blue-500 text-white px-4 py-2 rounded-full transition">All</button>
+      <input id="pub-search" type="search" placeholder="🔍 Search is beautiful..." class="ml-6 border border-gray-300 rounded-full px-4 py-2 w-1/3 focus:outline-none focus:ring-2 focus:ring-blue-500" />
     </div>
+
+    <div class="overflow-x-auto shadow-lg rounded-lg bg-white">
+      <table id="pub-table" class="min-w-full divide-y divide-gray-200">
+        <thead class="bg-gray-200">
+          <tr>
+            <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Status</th>
+            <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Title</th>
+            <th class="px-6 py-3 text-left text-sm font-medium text-gray-700 uppercase">Topic</th>
+          </tr>
+        </thead>
+        <tbody class="divide-y divide-gray-100">
+          <tr>
+            <td class="px-6 py-4 text-sm text-gray-600">Under Review (AAAI 2026)</td>
+            <td class="px-6 py-4">Test-Time Domain Adaptation for 3D Vision-Language Foundation Models (3D VLFMs)</td>
+            <td class="px-6 py-4 text-sm text-gray-600">Phase 1 accepted | 4 reviewers gave a score of 6 in Phase 2 | Currently in rebuttal</td>
+          </tr>
+          <tr>
+            <td class="px-6 py-4 text-sm text-gray-600">Under Review (WACV 2026)</td>
+            <td class="px-6 py-4">Object Hallucination Mitigation in Large Vision-Language Models</td>
+            <td class="px-6 py-4 text-sm text-gray-600">Explores improving reliability in visual reasoning through hallucination mitigation</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="mt-6 text-center">
+      <i class="fa-solid fa-graduation-cap text-2xl align-middle mr-2"></i>
+      <a href="https://scholar.google.com/citations?user=wTnN9IEAAAAJ&hl=en" class="text-blue-600 underline hover:text-blue-800">
+        More on Scholar
+      </a>
+    </div>
+  </div>
+</section>
+
+
+    
   </section>
 
   <!-- Academic Experiences -->
