--- a/index.html
+++ b/index.html
@@ -335,177 +335,81 @@ I actively collaborate with international scholars on projects targeting top com
 
 
     
-  </section>
+</section>
 
-  <!-- Academic Experiences -->
-  <section id="academic-experiences" class="py-20 bg-white">
-    <div class="max-w-screen-lg mx-auto px-6">
-      <h2 class="text-4xl font-bold mb-12 text-center uppercase tracking-wide" data-aos="zoom-in">
-        🎓 Academic Experiences
-      </h2>
-      <div class="space-y-8" data-aos="fade-up">
-        <!-- Teaching Assistant -->
-        <div>
-          <h3 class="text-2xl font-semibold mb-4 flex items-center gap-2">📝 Teaching Assistant</h3>
-          <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6">
-            <!-- Machine Learning, Spring 2025 -->
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
-              <div>
-                <a href="https://github.com/MJAHMADEE/MachineLearning2025s" class="font-semibold underline">Machine Learning</a>
-                <span class="text-sm text-slate-500"> — Dr. Mahdi Aliyari-Shoorehdeli</span><br/>
-                <span class="text-sm text-slate-500">Spring 2025</span>
-                <a href="https://github.com/MJAHMADEE/MachineLearning2025s">
-                  <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
-                </a>
-              </div>
-            </div>
-            <!-- AI, Spring 2025 -->
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
-              <div>
-                <a href="https://github.com/MJAHMADEE/AI2025s" class="font-semibold underline">Artificial Intelligence</a>
-                <span class="text-sm text-slate-500"> — Dr. Mahdi Aliyari-Shoorehdeli</span><br/>
-                <span class="text-sm text-slate-500">Spring 2025</span>
-                <a href="https://github.com/MJAHMADEE/AI2025s">
-                  <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
-                </a>
-              </div>
-            </div>
-            <!-- Linear Control, Fall 2024 -->
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
-              <div>
-                <a href="https://github.com/MJAHMADEE/LinearControl2024F" class="font-semibold underline">Linear Control</a>
-                <span class="text-sm text-slate-500"> — Prof. Hamid D. Taghirad</span><br/>
-                <span class="text-sm text-slate-500">Fall 2024</span>
-                <a href="https://github.com/MJAHMADEE/LinearControl2024F">
-                  <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
-                </a>
-              </div>
-            </div>
-            <!-- Deep Learning, Fall 2024 -->
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
-              <div>
-                <a href="https://github.com/MJAHMADEE/DeepLearning2024F" class="font-semibold underline">Deep Learning</a>
-                <span class="text-sm text-slate-500"> — Dr. Mahdi Aliyari-Shoorehdeli</span><br/>
-                <span class="text-sm text-slate-500">Fall 2024</span>
-                <a href="https://github.com/MJAHMADEE/DeepLearning2024F">
-                  <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
-                </a>
-              </div>
-            </div>
-            <!-- Fundamentals of Intelligent Systems, Fall 2024 -->
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
-              <div>
-                <a href="https://github.com/MJAHMADEE/MachineLearning2024F" class="font-semibold underline">Fundamentals of Intelligent Systems</a>
-                <span class="text-sm text-slate-500"> — Dr. Mahdi Aliyari-Shoorehdeli</span><br/>
-                <span class="text-sm text-slate-500">Fall 2024</span>
-                <a href="https://github.com/MJAHMADEE/MachineLearning2024F">
-                  <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
-                </a>
-              </div>
-            </div>
-            <!-- Modern Control, Spring 2024 -->
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
-              <div>
-                <a href="https://github.com/MJAHMADEE/ModernControl2024W" class="font-semibold underline">Modern Control</a>
-                <span class="text-sm text-slate-500"> — Prof. Hamid D. Taghirad</span><br/>
-                <span class="text-sm text-slate-500">Spring 2024</span>
-                <a href="https://github.com/MJAHMADEE/ModernControl2024W">
-                  <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
-                </a>
-              </div>
-            </div>
-            <!-- AI in Robotics, Spring 2024 -->
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/aut.png" alt="AUT" class="w-10 h-10" />
-              <div>
-                <a href="https://github.com/MJAHMADEE/AIinRobotics2024W" class="font-semibold underline">AI in Robotics</a>
-                <span class="text-sm text-slate-500"> — Dr. Iman Sharifi</span><br/>
-                <span class="text-sm text-slate-500">Spring 2024</span>
-                <a href="https://github.com/MJAHMADEE/AIinRobotics2024W">
-                  <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
-                </a>
-              </div>
-            </div>
-            <!-- Machine Learning, Spring 2024 -->
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
-              <div>
-                <a href="https://github.com/MJAHMADEE/MachineLearning2024W" class="font-semibold underline">Machine Learning</a>
-                <span class="text-sm text-slate-500"> — Dr. Mahdi Aliyari-Shoorehdeli</span><br/>
-                <span class="text-sm text-slate-500">Spring 2024</span>
-                <a href="https://github.com/MJAHMADEE/MachineLearning2024W">
-                  <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
-                </a>
-              </div>
-            </div>
-            <!-- Machine Learning, Fall 2023 -->
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
-              <div>
-                <a href="https://github.com/MJAHMADEE/MachineLearning2023" class="font-semibold underline">Machine Learning</a>
-                <span class="text-sm text-slate-500"> — Dr. Mahdi Aliyari-Shoorehdeli</span><br/>
-                <span class="text-sm text-slate-500">Fall 2023</span>
-                <a href="https://github.com/MJAHMADEE/MachineLearning2023">
-                  <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
-                </a>
-              </div>
-            </div>
-            <!-- Fundamentals of Intelligent Systems, Fall 2023 -->
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
-              <div>
-                <a href="https://github.com/MJAHMADEE/MachineLearning2023" class="font-semibold underline">Fundamentals of Intelligent Systems</a>
-                <span class="text-sm text-slate-500"> — Dr. Mahdi Aliyari-Shoorehdeli</span><br/>
-                <span class="text-sm text-slate-500">Fall 2023</span>
-                <a href="https://github.com/MJAHMADEE/MachineLearning2023">
-                  <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
-                </a>
-              </div>
-            </div>
-            <!-- Fault Detection & Diagnosis, Spring 2023 -->
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
-              <div>
-                <a href="https://github.com/MJAHMADEE/Machine-Learning-and-Fault-Detection" class="font-semibold underline">Fault Detection & Diagnosis</a>
-                <span class="text-sm text-slate-500"> — Dr. Mahdi Aliyari-Shoorehdeli</span><br/>
-                <span class="text-sm text-slate-500">Spring 2023</span>
-                <a href="https://github.com/MJAHMADEE/Machine-Learning-and-Fault-Detection">
-                  <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
-                </a>
-              </div>
-            </div>
-            <!-- Industrial Control, Spring 2023 -->
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
-              <div>
-                <a href="https://github.com/MJAHMADEE/Industrial_Control_Course" class="font-semibold underline">Industrial Control</a>
-                <span class="text-sm text-slate-500"> — Prof. Hamid D. Taghirad</span><br/>
-                <span class="text-sm text-slate-500">Spring 2023</span>
-                <a href="https://github.com/MJAHMADEE/Industrial_Control_Course">
-                  <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
-                </a>
-              </div>
-            </div>
-            <!-- Robotics, Spring 2022 -->
-            <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-              <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
-              <div>
-                <a href="https://github.com/aras-labs/Robotics" class="font-semibold underline">Robotics</a>
-                <span class="text-sm text-slate-500"> — Prof. Hamid D. Taghirad</span><br/>
-                <span class="text-sm text-slate-500">Spring 2022</span>
-                <a href="https://github.com/aras-labs/Robotics">
-                  <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
-                </a>
-              </div>
+<!-- Academic Experiences -->
+<section id="academic-experiences" class="py-20 bg-white">
+  <div class="max-w-screen-lg mx-auto px-6">
+    <h2 class="text-4xl font-bold mb-12 text-center uppercase tracking-wide" data-aos="zoom-in">
+      🎓 Academic Experiences
+    </h2>
+    <div class="space-y-8" data-aos="fade-up">
+      <!-- Teaching Assistant -->
+      <div>
+        <h3 class="text-2xl font-semibold mb-4 flex items-center gap-2">📝 Teaching Assistant</h3>
+        <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6">
+
+          <!-- Deep Generative Models (Head TA, Spring 2025) -->
+          <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
+            <div>
+              <a href="https://github.com/shining0611armor/Deep-Generative-Models" class="font-semibold underline">Deep Generative Models (DGM)</a>
+              <span class="text-sm text-slate-500"> — Dr. Behrooz Nasihatkon</span><br/>
+              <span class="text-sm text-slate-500">Spring 2025 • Head TA</span>
+              <a href="https://github.com/shining0611armor/Deep-Generative-Models">
+                <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
+              </a>
             </div>
           </div>
+
+          <!-- Advanced Mathematics for Machine Learning (Head TA, Fall 2024) -->
+          <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
+            <div>
+              <a href="https://github.com/shining0611armor/Advanced-Mathematics-for-Machine-Learning" class="font-semibold underline">Advanced Mathematics for Machine Learning</a>
+              <span class="text-sm text-slate-500"> — Dr. Behrooz Nasihatkon</span><br/>
+              <span class="text-sm text-slate-500">Fall 2024 • Head TA</span>
+              <a href="https://github.com/shining0611armor/Advanced-Mathematics-for-Machine-Learning">
+                <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
+              </a>
+            </div>
+          </div>
+
+          <!-- Machine Learning (TA, Fall 2024) -->
+          <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
+            <div>
+              <span class="font-semibold underline">Machine Learning (ML)</span>
+              <span class="text-sm text-slate-500"> — Dr. Babak Nasersharif</span><br/>
+              <span class="text-sm text-slate-500">Fall 2024 • TA</span>
+            </div>
+          </div>
+
+          <!-- Deep Learning (TA, Fall 2024) -->
+          <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
+            <div>
+              <span class="font-semibold underline">Deep Learning (DL)</span>
+              <span class="text-sm text-slate-500"> — Dr. Mahdi Aliyari-Shoorehdeli</span><br/>
+              <span class="text-sm text-slate-500">Fall 2024 • TA</span>
+            </div>
+          </div>
+
+          <!-- Machine Learning (TA, Spring 2024) -->
+          <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
+            <div>
+              <span class="font-semibold underline">Machine Learning (ML)</span>
+              <span class="text-sm text-slate-500"> — Dr. Mahdi Aliyari-Shoorehdeli</span><br/>
+              <span class="text-sm text-slate-500">Spring 2024 • TA</span>
+            </div>
+          </div>
+
         </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- Reviewer -->
 <div class="my-10">
