--- a/index.html
+++ b/index.html
@@ -343,92 +343,99 @@ I actively collaborate with international scholars on projects targeting top com
     <h2 class="text-4xl font-bold mb-12 text-center uppercase tracking-wide" data-aos="zoom-in">
       🎓 Academic Experiences
     </h2>
-    <div class="space-y-8" data-aos="fade-up">
+
+    <div class="space-y-14" data-aos="fade-up">
+
       <!-- Teaching Assistant -->
       <div>
-        <h3 class="text-2xl font-semibold mb-4 flex items-center gap-2">📝 Teaching Assistant</h3>
+        <h3 class="text-2xl font-semibold mb-6 flex items-center gap-2">📝 Teaching Assistant</h3>
+
         <div class="grid sm:grid-cols-2 md:grid-cols-3 gap-6">
 
-          <!-- Deep Generative Models (Head TA, Spring 2025) -->
-          <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
+          <!-- Deep Generative Models -->
+          <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
-              <a href="https://github.com/shining0611armor/Deep-Generative-Models" class="font-semibold underline">Deep Generative Models (DGM)</a>
-              <span class="text-sm text-slate-500"> — Dr. Behrooz Nasihatkon</span><br/>
-              <span class="text-sm text-slate-500">Spring 2025 • Head TA</span>
+              <a href="https://github.com/shining0611armor/Deep-Generative-Models"
+                 class="font-semibold text-lg underline block">Deep Generative Models (DGM)</a>
+              <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Behrooz Nasihatkon</p>
+              <p class="text-sm text-slate-500 mt-1">Spring 2025 • <span class="font-medium text-slate-600">Head TA</span></p>
               <a href="https://github.com/shining0611armor/Deep-Generative-Models">
-                <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
+                <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo"
+                     class="w-5 h-5 inline-block mt-2" />
               </a>
             </div>
           </div>
 
-          <!-- Advanced Mathematics for Machine Learning (Head TA, Fall 2024) -->
-          <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
+          <!-- Advanced Mathematics for ML -->
+          <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
-              <a href="https://github.com/shining0611armor/Advanced-Mathematics-for-Machine-Learning" class="font-semibold underline">Advanced Mathematics for Machine Learning</a>
-              <span class="text-sm text-slate-500"> — Dr. Behrooz Nasihatkon</span><br/>
-              <span class="text-sm text-slate-500">Fall 2024 • Head TA</span>
+              <a href="https://github.com/shining0611armor/Advanced-Mathematics-for-Machine-Learning"
+                 class="font-semibold text-lg underline block">Advanced Mathematics for Machine Learning</a>
+              <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Behrooz Nasihatkon</p>
+              <p class="text-sm text-slate-500 mt-1">Fall 2024 • <span class="font-medium text-slate-600">Head TA</span></p>
               <a href="https://github.com/shining0611armor/Advanced-Mathematics-for-Machine-Learning">
-                <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo" class="w-5 h-5 inline-block ml-2" />
+                <img src="https://mjahmadee.github.io/Images/git1.png" alt="Repo"
+                     class="w-5 h-5 inline-block mt-2" />
               </a>
             </div>
           </div>
 
-          <!-- Machine Learning (TA, Fall 2024) -->
-          <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
+          <!-- Machine Learning (Fall 2024) -->
+          <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
-              <span class="font-semibold underline">Machine Learning (ML)</span>
-              <span class="text-sm text-slate-500"> — Dr. Babak Nasersharif</span><br/>
-              <span class="text-sm text-slate-500">Fall 2024 • TA</span>
+              <span class="font-semibold text-lg underline block">Machine Learning (ML)</span>
+              <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Babak Nasersharif</p>
+              <p class="text-sm text-slate-500 mt-1">Fall 2024 • TA</p>
             </div>
           </div>
 
-          <!-- Deep Learning (TA, Fall 2024) -->
-          <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
+          <!-- Deep Learning -->
+          <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
-              <span class="font-semibold underline">Deep Learning (DL)</span>
-              <span class="text-sm text-slate-500"> — Dr. Mahdi Aliyari-Shoorehdeli</span><br/>
-              <span class="text-sm text-slate-500">Fall 2024 • TA</span>
+              <span class="font-semibold text-lg underline block">Deep Learning (DL)</span>
+              <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Mahdi Aliyari-Shoorehdeli</p>
+              <p class="text-sm text-slate-500 mt-1">Fall 2024 • TA</p>
             </div>
           </div>
 
-          <!-- Machine Learning (TA, Spring 2024) -->
-          <div class="bg-gray-50 shadow rounded-lg p-4 flex items-start gap-3 hover:shadow-lg transition">
-            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10" />
+          <!-- Machine Learning (Spring 2024) -->
+          <div class="bg-gray-50 shadow rounded-2xl p-5 hover:shadow-lg transition flex items-start gap-3">
+            <img src="https://mjahmadee.github.io/Images/kntu.png" alt="KNTU" class="w-10 h-10 mt-1" />
             <div>
-              <span class="font-semibold underline">Machine Learning (ML)</span>
-              <span class="text-sm text-slate-500"> — Dr. Mahdi Aliyari-Shoorehdeli</span><br/>
-              <span class="text-sm text-slate-500">Spring 2024 • TA</span>
+              <span class="font-semibold text-lg underline block">Machine Learning (ML)</span>
+              <p class="text-sm text-slate-500 mt-1">Instructor: Dr. Mahdi Aliyari-Shoorehdeli</p>
+              <p class="text-sm text-slate-500 mt-1">Spring 2024 • TA</p>
             </div>
           </div>
 
         </div>
       </div>
+
+      <!-- Reviewer -->
+      <div>
+        <h3 class="text-2xl font-semibold mb-6 flex items-center gap-2">📰 Reviewer</h3>
+        <div class="flex justify-center">
+          <div class="bg-gray-50 shadow rounded-2xl p-6 flex items-start gap-4 hover:shadow-lg transition w-full max-w-3xl">
+            <img src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/AAAI_Logo.png?raw=true"
+                 alt="AAAI 2026"
+                 class="w-12 h-12 flex-shrink-0 mt-1" />
+            <div>
+              <a href="https://aaai.org/Conferences/AAAI-26/"
+                 class="font-semibold underline text-lg block">
+                 The 40th Annual AAAI Conference on Artificial Intelligence (AAAI 2026)
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
-
-<!-- Reviewer -->
-<div class="my-10">
-  <h3 class="text-2xl font-semibold mb-6 flex items-center gap-2">📰 Reviewer</h3>
-  
-  <div class="flex justify-center">
-    <div class="bg-gray-50 shadow rounded-lg p-6 flex items-start gap-3 hover:shadow-lg transition w-full max-w-3xl">
-      <img src="https://github.com/shining0611armor/shining0611armor.github.io/blob/main/Images/AAAI_Logo.png?raw=true" 
-           alt="AAAI 2026" 
-           class="w-12 h-12 flex-shrink-0" />
-      <div class="whitespace-nowrap">
-        <a href="https://aaai.org/Conferences/AAAI-26/" 
-           class="font-semibold underline text-lg">
-          The 40th Annual AAAI Conference on Artificial Intelligence (AAAI 2026)
-        </a>
-      </div>
-    </div>
-  </div>
-</div>
 
 
 
